feat: add archive api
